--- a/enter.ui
+++ b/enter.ui
@@ -26,12 +26,12 @@
     <string/>
    </property>
   </widget>
-  <widget class="QPushButton" name="eye">
+  <widget class="QPushButton" name="eye_show">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>90</y>
-     <width>16</width>
+     <width>21</width>
      <height>23</height>
     </rect>
    </property>
@@ -122,6 +122,30 @@
    </property>
    <property name="text">
     <string>ok</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="eye_hide">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>90</y>
+     <width>20</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1, fx:0.5, fy:0.5, stop:0 rgba(20, 20, 20,255), stop:0.19397 rgba(0, 0, 0, 255), stop:0.202312 rgba(128, 128, 128, 128), stop:0.495514 rgba(76, 58, 0, 255), stop:0.504819 rgb(255, 255, 255), stop:0.79 rgba(255, 255, 255, 255), stop:1 rgba(255, 255, 255, 255));
+border: 0px;
+border-radius: 4px</string>
+   </property>
+   <property name="text">
+    <string>-</string>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>10</width>
+     <height>10</height>
+    </size>
    </property>
   </widget>
  </widget>
