--- a/registr.ui
+++ b/registr.ui
@@ -49,12 +49,12 @@
     <string>отмена</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="eye_s2">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>160</y>
-     <width>16</width>
+     <width>21</width>
      <height>23</height>
     </rect>
    </property>
@@ -150,14 +150,17 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="eye_s1">
    <property name="geometry">
     <rect>
      <x>170</x>
      <y>100</y>
-     <width>16</width>
+     <width>21</width>
      <height>23</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>-</string>
@@ -184,6 +187,35 @@
    </property>
    <property name="text">
     <string>ok</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="eye_h1">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>100</y>
+     <width>21</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>-</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="eye_h2">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>160</y>
+     <width>21</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>-</string>
    </property>
   </widget>
  </widget>
