--- a/проект.ui
+++ b/проект.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>734</width>
-    <height>596</height>
+    <height>592</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>734</width>
+    <height>592</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>734</width>
+    <height>592</height>
+   </size>
   </property>
   <property name="mouseTracking">
    <bool>false</bool>
@@ -39,13 +51,16 @@
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="f_btn">
+   <widget class="QPushButton" name="btn_miss">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>-20</x>
+      <x>0</x>
       <y>30</y>
-      <width>461</width>
-      <height>551</height>
+      <width>440</width>
+      <height>540</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -94,24 +109,24 @@
      <string>Регистрация</string>
     </property>
    </widget>
-   <widget class="QLabel" name="max_points">
+   <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>470</x>
       <y>30</y>
-      <width>261</width>
+      <width>251</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>#наибольшее число очков</string>
+     <string>Рекорд:</string>
     </property>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>461</x>
-      <y>134</y>
+      <y>160</y>
       <width>271</width>
       <height>25</height>
      </rect>
@@ -133,7 +148,7 @@
     <property name="geometry">
      <rect>
       <x>461</x>
-      <y>194</y>
+      <y>210</y>
       <width>271</width>
       <height>16</height>
      </rect>
@@ -146,7 +161,7 @@
     <property name="geometry">
      <rect>
       <x>461</x>
-      <y>165</y>
+      <y>190</y>
       <width>271</width>
       <height>23</height>
      </rect>
@@ -155,8 +170,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>461</x>
-      <y>203</y>
+      <x>450</x>
+      <y>220</y>
       <width>109</width>
       <height>16</height>
      </rect>
@@ -188,7 +203,7 @@
     <property name="geometry">
      <rect>
       <x>461</x>
-      <y>103</y>
+      <y>130</y>
       <width>271</width>
       <height>25</height>
      </rect>
@@ -210,7 +225,7 @@
     <property name="geometry">
      <rect>
       <x>461</x>
-      <y>84</y>
+      <y>110</y>
       <width>26</width>
       <height>16</height>
      </rect>
@@ -223,23 +238,13 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>60</y>
+      <y>85</y>
       <width>271</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>СТАРТ</string>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="listWidget">
-    <property name="geometry">
-     <rect>
-      <x>461</x>
-      <y>225</y>
-      <width>256</width>
-      <height>321</height>
-     </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="exit_btn">
@@ -259,7 +264,7 @@
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>60</y>
+      <y>85</y>
       <width>271</width>
       <height>23</height>
      </rect>
@@ -268,9 +273,124 @@
      <string>Остановить</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="scroll_btn">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>225</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>показать</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="scroll_label">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>225</y>
+      <width>47</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="select_mode">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>5</y>
+      <width>75</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="max_points_sm">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>50</y>
+      <width>261</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="max_points_am">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>60</y>
+      <width>261</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="tableLiders_sm">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>270</y>
+      <width>271</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <property name="statusTip">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QTableWidget" name="tableLiders_am">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>270</y>
+      <width>271</width>
+      <height>291</height>
+     </rect>
+    </property>
+    <property name="statusTip">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="select_sm_table">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>240</y>
+      <width>60</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>стандарт</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="select_am_table">
+    <property name="geometry">
+     <rect>
+      <x>515</x>
+      <y>240</y>
+      <width>60</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>аркада</string>
+    </property>
+   </widget>
+   <zorder>tableLiders_am</zorder>
+   <zorder>btn_miss</zorder>
    <zorder>start_btn</zorder>
    <zorder>stop_btn</zorder>
-   <zorder>exit_btn</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>line_2</zorder>
    <zorder>rezult</zorder>
@@ -278,13 +398,20 @@
    <zorder>name</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>label_2</zorder>
-   <zorder>listWidget</zorder>
-   <zorder>max_points</zorder>
+   <zorder>label_3</zorder>
    <zorder>line</zorder>
    <zorder>timeForPlayer</zorder>
-   <zorder>f_btn</zorder>
-   <zorder>entrence</zorder>
    <zorder>registration</zorder>
+   <zorder>entrence</zorder>
+   <zorder>exit_btn</zorder>
+   <zorder>scroll_btn</zorder>
+   <zorder>scroll_label</zorder>
+   <zorder>select_mode</zorder>
+   <zorder>max_points_sm</zorder>
+   <zorder>max_points_am</zorder>
+   <zorder>tableLiders_sm</zorder>
+   <zorder>select_sm_table</zorder>
+   <zorder>select_am_table</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
