--- a/registr.ui
+++ b/registr.ui
@@ -49,19 +49,6 @@
     <string>отмена</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="eye_s2">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>160</y>
-     <width>21</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>-</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
@@ -72,7 +59,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>подтвердите пароль</string>
+    <string>Подтвердите пароль</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_6">
@@ -80,12 +67,12 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>47</width>
-     <height>13</height>
+     <width>81</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>имя</string>
+    <string>Введите имя:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -98,7 +85,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>пароль</string>
+    <string>Пароль</string>
    </property>
   </widget>
   <widget class="QLabel" name="error_name">
@@ -150,22 +137,6 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="eye_s1">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>100</y>
-     <width>21</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
-   <property name="text">
-    <string>-</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="input_password_reg_2">
    <property name="geometry">
     <rect>
@@ -194,15 +165,59 @@
     <rect>
      <x>170</x>
      <y>100</y>
-     <width>21</width>
-     <height>23</height>
+     <width>20</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true"/>
+    <string notr="true">background-color: rgb(255, 255, 255);
+</string>
    </property>
    <property name="text">
-    <string>-</string>
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>hide.png</normaloff>hide.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="eye_s1">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>100</y>
+     <width>21</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>show.png</normaloff>show.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="autoRepeat">
+    <bool>false</bool>
+   </property>
+   <property name="autoExclusive">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="eye_h2">
@@ -210,12 +225,59 @@
     <rect>
      <x>170</x>
      <y>160</y>
-     <width>21</width>
-     <height>23</height>
+     <width>20</width>
+     <height>20</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+</string>
+   </property>
    <property name="text">
-    <string>-</string>
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>hide.png</normaloff>hide.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="eye_s2">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>160</y>
+     <width>21</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>show.png</normaloff>show.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>16</width>
+     <height>16</height>
+    </size>
+   </property>
+   <property name="autoRepeat">
+    <bool>false</bool>
+   </property>
+   <property name="autoExclusive">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
