--- a/rezult_window.ui
+++ b/rezult_window.ui
@@ -26,7 +26,7 @@
     <string notr="true">font: 14pt &quot;MS Shell Dlg 2&quot;;</string>
    </property>
    <property name="text">
-    <string>Твой результат</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="ok">
